--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tick Tack Toe</title>
     <script src="libs/jquery-3.1.0.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
 
