added css style file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tick Tack Toe</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="libs/jquery-3.1.0.min.js"></script>
     <script src="js/script.js"></script>
 </head>
