--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Tick Tack Toe</title>
@@ -7,7 +8,11 @@
     <script src="libs/jquery-3.1.0.min.js"></script>
     <script src="js/script.js"></script>
 </head>
-<body>
 
+<body>
+    <div>
+        <input type="button" value="reset!" id="reset">
+    </div>
 </body>
+
 </html>
