user can change background color of board without changing state of the game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <div>
         <input type="button" value="reset!" id="reset">
+        <select id="color">
+            <option value="antiquewhite" style="background-color: antiquewhite">Antiquewhite</option>
+            <option value="red" style="background-color: red">Czerwony</option>
+            <option value="blue"style="background-color: blue">Niebieski</option>
+            <option value="yellow"style="background-color: yellow">Żółty</option>
+        </select>
+        <label>Wielkosc planszy: <input type="number" value="3" min="3"></label>
     </div>
 </body>
 
