user can change size of the game

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <option value="blue"style="background-color: blue">Niebieski</option>
             <option value="yellow"style="background-color: yellow">Żółty</option>
         </select>
-        <label>Wielkosc planszy: <input type="number" value="3" min="3"></label>
+        <label>Wielkosc planszy: <input type="number" value="3" min="3" id="size"></label>
     </div>
+    <div id="game"></div>
 </body>
 
 </html>
